FIX: Final resolution for all TS7006/TS7031 errors by explicitly typing the mutation handler with MutationCtx and InsertBatchArgs.

--- a/weone/tsconfig.json
+++ b/weone/tsconfig.json
@@ -19,10 +19,11 @@
         "module": "ES2022",
         "baseUrl": "./",
         "paths": {
-            "@/*": [
-                "src/app/*"
-            ],
-            "convex/*": ["../backend/convex/*"]
+            "@/*": ["src/app/*"],
+            "convex/*": ["../backend/convex/*"],
+            "convex/values": ["../backend/node_modules/convex/values"],
+            "convex/server": ["../backend/node_modules/convex/server"],
+            "convex": ["../backend/node_modules/convex"]
         }
     },
     "angularCompilerOptions": {
