FIX: Final resolution for all TS7006/TS7031 errors by explicitly typing the mutation handler with MutationCtx and InsertBatchArgs.

--- a/weone/tsconfig.app.json
+++ b/weone/tsconfig.app.json
@@ -11,5 +11,9 @@
     ],
     "include": [
         "src/**/*.d.ts"
-    ]
+    ],
+    "exclude": [
+    "../backend/convex/wards.ts",
+    "../backend/convex/schema.ts"
+  ]
 }
