--- a/weone/tsconfig.app.json
+++ b/weone/tsconfig.app.json
@@ -14,6 +14,7 @@
     ],
     "exclude": [
     "../backend/convex/wards.ts",
-    "../backend/convex/schema.ts"
+    "../backend/convex/schema.ts",
+    "../backend/convex/_generated/api.js" 
   ]
 }
