FINAL FIX: Resolved implicit 'batch' error and excluded auto-generated api.js to bypass final module resolution failure.

--- a/weone/tsconfig.app.json
+++ b/weone/tsconfig.app.json
@@ -15,6 +15,7 @@
     "exclude": [
     "../backend/convex/wards.ts",
     "../backend/convex/schema.ts",
+    "../backend/convex/_generated/**/*",
     "../backend/convex/_generated/api.js" 
   ]
 }
