FINAL FIX: Resolved implicit 'batch' error and excluded auto-generated api.js to bypass final module resolution failure.

--- a/weone/tsconfig.app.json
+++ b/weone/tsconfig.app.json
@@ -10,7 +10,8 @@
         "src/main.ts"
     ],
     "include": [
-        "src/**/*.d.ts"
+        "src/**/*.d.ts",
+        "src/**/*.ts" 
     ],
     "exclude": [
     "../backend/convex/wards.ts",
