--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/backend": "^2.18.0",
     "@types/node": "^24.7.2",
     "convex": "^1.27.5",
     "csv-parser": "^3.2.0"
