--- a/weone/tsconfig.app.json
+++ b/weone/tsconfig.app.json
@@ -16,5 +16,6 @@
     "../backend/convex/wards.ts",
     "../backend/convex/schema.ts",
     "../backend/convex/_generated/**/*",
+    "../backend/convex/users.ts"
   ]
 }
