--- a/weone/package.json
+++ b/weone/package.json
@@ -55,6 +55,7 @@
         "postcss": "^8.5.6",
         "prettier": "^3.0.0",
         "tailwindcss": "^4.1.11",
-        "typescript": "~5.8.3"
+        "typescript": "~5.8.3",
+        "@types/node": "^20.0.0",
     }
 }
