--- a/weone/package.json
+++ b/weone/package.json
@@ -56,6 +56,6 @@
         "prettier": "^3.0.0",
         "tailwindcss": "^4.1.11",
         "typescript": "~5.8.3",
-        "@types/node": "^20.0.0",
+        "@types/node": "^20.0.0"
     }
 }
