--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -6,7 +6,7 @@
       "config": {
         "installCommand": "npm install --legacy-peer-deps",
         "buildCommand": "npm run build",
-        "outputDirectory": "dist/apollo-ng/browser" 
+        "outputDirectory": "dist" 
       }
     }
   ],
