--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -6,7 +6,8 @@
             "config": {
                 "installCommand": "npm install --legacy-peer-deps",
                 "buildCommand": "npm run build",
-"outputDirectory": "dist/browser"            }
+                "outputDirectory": "weone/dist/apollo-ng/browser"
+            }
         }
     ],
     "routes": [
