--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -5,8 +5,7 @@
             "use": "@vercel/static-build",
             "config": {
                 "installCommand": "npm install --legacy-peer-deps",
-                "buildCommand": "npm run build",
-                "outputDirectory": "weone/dist/apollo-ng/browser"
+                "buildCommand": "npm run build"
             }
         }
     ],
