--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -5,7 +5,8 @@
             "use": "@vercel/static-build",
             "config": {
                 "installCommand": "npm install --legacy-peer-deps",
-                "buildCommand": "npm run build"
+                "buildCommand": "npm run build",
+                "outputDirectory": "dist/apollo-ng/browser"
             }
         }
     ],
