--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,8 +1,14 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+    "builds": [
+        {
+            "src": "weone/package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "installCommand": "npm install --legacy-peer-deps",
+                "buildCommand": "npm run build",
+                "outputDirectory": "dist/apollo-ng/browser"
+            }
+        }
+    ]
+
 }
