--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,23 +1,18 @@
 {
-    "builds": [
-        {
-            "src": "weone/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "installCommand": "npm install --legacy-peer-deps",
-                "buildCommand": "npm run build",
-                "outputDirectory": "weone/dist/apollo-ng/browser"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/[^.]+",
-            "dest": "/index.html"
-        },
-        {
-            "src": "/",
-            "dest": "/index.html"
-        }
-    ]
+  "builds": [
+    {
+      "src": "weone/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install --legacy-peer-deps", 
+        
+        "buildCommand": "npm run build",
+        "outputDirectory": "weone/dist/apollo-ng/browser" 
+      }
+    }
+  ],
+  "routes": [
+    { "src": "/[^.]+", "dest": "/index.html" }, 
+    { "src": "/", "dest": "/index.html" }      
+  ]
 }
