--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@clerk/backend": "^2.18.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^24.7.2",
+    "bcryptjs": "^3.0.2",
     "convex": "^1.27.5",
     "csv-parser": "^3.2.0"
   }
