--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,17 +1,23 @@
 {
-  "builds": [
-    {
-      "src": "weone/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "installCommand": "npm install --legacy-peer-deps", 
-        
-        "buildCommand": "npm run build"
-      }
-    }
-  ],
-  "routes": [
-    { "src": "/[^.]+", "dest": "/index.html" }, 
-    { "src": "/", "dest": "/index.html" }      
-  ]
+    "builds": [
+        {
+            "src": "weone/package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "installCommand": "npm install --legacy-peer-deps",
+                "outputDirectory": "weone/dist/apollo-ng/browser",
+                "buildCommand": "npm run build"
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/[^.]+",
+            "dest": "/index.html"
+        },
+        {
+            "src": "/",
+            "dest": "/index.html"
+        }
+    ]
 }
