--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -5,7 +5,7 @@
             "use": "@vercel/static-build",
             "config": {
                 "installCommand": "npm install --legacy-peer-deps",
-                "outputDirectory": "weone/dist/apollo-ng/browser",
+                "outputDirectory": "dist/apollo-ng/browser",
                 "buildCommand": "npm run build"
             }
         }
