--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,5 +1,15 @@
 {
-   
+   "builds": [
+    {
+      "src": "weone/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install --legacy-peer-deps",
+        "buildCommand": "npm run build --output-path dist/apollo-ng/browser" , 
+        "outputDirectory": "dist/apollo-ng/browser" 
+      }
+    }
+  ],
     "routes": [
         {
             "src": "/[^.]+",
