--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,13 +1,21 @@
 {
-  
-    "routes": [
-        {
-            "src": "/[^.]+",
-            "dest": "/index.html"
-        },
-        {
-            "src": "/",
-            "dest": "/index.html"
-        }
-    ]
+  "builds": [
+    {
+      "src": "weone/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "installCommand": "npm install --legacy-peer-deps",
+        
+     
+        "buildCommand": "npx ng build --output-path dist/apollo-ng/browser",
+        
+    
+        "outputDirectory": "dist/apollo-ng/browser" 
+      }
+    }
+  ],
+  "routes": [
+    { "src": "/[^.]+", "dest": "/index.html" }, 
+    { "src": "/", "dest": "/index.html" }      
+  ]
 }
