outputpathchangepackage.jsonangular.jsonandvercel.json

--- a/weone/package.json
+++ b/weone/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "npx ng build --output-path=dist/apollo-ng/browser",
+        "build": "npx ng build --output-path dist ",
         "watch": "ng build --watch --configuration development",
         "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
         "test": "ng test"
