--- a/weone/tsconfig.json
+++ b/weone/tsconfig.json
@@ -21,7 +21,7 @@
         "baseUrl": "./",
         "paths": {
             "@/*": ["src/app/*"],
-            "convex/*": ["../backend/convex/*"],
+            "convex/*": ["../backconvex-logic/convex/*"],
            
         }
     },
