--- a/weone/vercel.json
+++ b/weone/vercel.json
@@ -1,12 +1,12 @@
 {
   "builds": [
     {
-      "src": "package.json",
+      "src": "weone/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "installCommand": "npm install --legacy-peer-deps",
+        "installCommand": "cd weone && npm install --legacy-peer-deps",
         "buildCommand": "npm run build",
-        "outputDirectory": "dist/browser" 
+        "outputDirectory": "dist/apollo-ng/browser" 
       }
     }
   ],
