--- a/weone/angular.json
+++ b/weone/angular.json
@@ -32,7 +32,8 @@
                             "src/assets",
                             {
                                 "glob": "**/*",
-                                "input": "public"
+                                "input": "public",
+                                "output": "/"
                             }
                         ],
                         "styles": [
