--- a/weone/angular.json
+++ b/weone/angular.json
@@ -17,10 +17,9 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist", 
+                        "outputPath": "dist",
                         "index": "src/index.html",
                         "browser": "src/main.ts",
-                        
                         "polyfills": [
                             "zone.js",
                             "node_modules/@angular/localize/fesm2022/init.mjs"
@@ -33,6 +32,11 @@
                             {
                                 "glob": "**/*",
                                 "input": "public",
+                                "output": "/"
+                            },
+                            {
+                                "glob": "_redirects",
+                                "input": "src",
                                 "output": "/"
                             }
                         ],
