--- a/weone/angular.json
+++ b/weone/angular.json
@@ -61,7 +61,8 @@
                                     "maximumError": "25kb"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "baseHref": "/"
                         },
                         "development": {
                             "optimization": false,
